[package]
name = "candle-rotary"
version = "0.0.1"
edition = "2021"

description = "Rotary layer for the candle ML framework."
keywords = ["tensor", "machine-learning"]
categories = ["science"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
candle = { git = "https://github.com/hamflx/candle.git", package = "candle-core", features = ["cuda"]}
half = { version = "2.3.1", features = ["num-traits"] }

[build-dependencies]
anyhow = { version = "1", features = ["backtrace"] }
bindgen_cuda = "0.1.1"

[dev-dependencies]
anyhow = { version = "1", features = ["backtrace"] }
candle-nn = { git = "https://github.com/hamflx/candle.git", package = "candle-nn", features = ["cuda"] }
